[package]
name = "ttr-generator"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0", features = ["derive"] }
cities-common = { path = "../cities-common"}
cities-client = { path = "../cities-client"}
tokio = { version = "1.0", features = ["full"] }
plotters = "0.3.3"